[gd_scene load_steps=5 format=3 uid="uid://bxas1uwj2dy0g"]

[ext_resource type="Script" uid="uid://bf4u8s5fgycp3" path="res://game_seq_2.gd" id="1_cin3e"]
[ext_resource type="Texture2D" uid="uid://co6riotutgoms" path="res://Assets/9.png" id="1_l2p0o"]
[ext_resource type="Texture2D" uid="uid://cmxpnfspsy41p" path="res://Assets/exit.png" id="3_t6ceh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l2p0o"]
bg_color = Color(0.08627451, 0.08235294, 0.11372549, 1)
border_width_left = 13
border_width_top = 13
border_width_right = 13
border_width_bottom = 13
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 18.0
expand_margin_top = 28.0
expand_margin_right = 25.0
expand_margin_bottom = 45.0
shadow_color = Color(0, 0, 0, 0.9411765)
shadow_size = 6
shadow_offset = Vector2(0.3, 0.22)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cin3e")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = -3.0
offset_right = 1154.0
offset_bottom = 639.0
texture = ExtResource("1_l2p0o")
expand_mode = 1

[node name="exit" type="TextureRect" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 641.0
offset_top = 272.0
offset_right = 1119.0
offset_bottom = 510.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_t6ceh")
expand_mode = 1

[node name="Label" type="Label" parent="."]
layout_direction = 1
layout_mode = 0
offset_left = 95.0
offset_top = 85.0
offset_right = 1024.0
offset_bottom = 186.0
mouse_filter = 0
theme_override_colors/font_color = Color(0.9166399, 0.91663986, 0.9166398, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_l2p0o")
text = "Congrats your chai is done !!
And you are done with the break as well."
horizontal_alignment = 1

[node name="Button" type="Button" parent="Label"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.064
anchor_top = -0.71900004
anchor_right = 1.1420001
anchor_bottom = 5.4960003
offset_left = 720.456
offset_top = 481.61902
offset_right = -117.91809
offset_bottom = -76.09601
theme_type_variation = &"FlatButton"

[node name="FocusTimer" type="Timer" parent="."]
physics_interpolation_mode = 1
process_callback = 0

[node name="Exitbutton" type="Button" parent="."]
layout_mode = 0
offset_left = 750.0
offset_top = 376.0
offset_right = 1054.0
offset_bottom = 459.0
flat = true

[node name="Label2" type="Label" parent="."]
layout_direction = 1
layout_mode = 0
offset_left = 92.0
offset_top = 308.0
offset_right = 627.0
offset_bottom = 572.0
mouse_filter = 0
theme_override_colors/font_color = Color(0.9166399, 0.91663986, 0.9166398, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_l2p0o")
text = "Congrats your chai is done !!
And you are done with the break as well."
horizontal_alignment = 1

[connection signal="pressed" from="Label/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Exitbutton" to="." method="_on_exitbutton_pressed"]
